--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1-jre'
+
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'jdbc.dao.App'
+    mainClass = 'application.App'
 }
